adding GA tracking id

--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
         "ga"
       );
 
-      ga("create", "UA-XXXXX-Y", "auto");
+      ga("create", "G-2TMGHBVFHD", "auto");
+      
     </script>
     <!-- End Google Analytics -->
 
