--- a/index.html
+++ b/index.html
@@ -6,15 +6,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
 
-  <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-2TMGHBVFHD"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-2TMGHBVFHD"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
 
-  gtag('config', 'G-2TMGHBVFHD');
-</script>
+      gtag("config", "G-2TMGHBVFHD");
+    </script>
 
     <script src="//code.angularjs.org/1.3.0-rc.2/angular.min.js"></script>
     <script src="//code.angularjs.org/1.3.0-rc.2/angular-route.min.js"></script>
@@ -25,8 +30,14 @@
   <body>
     <div class="container">
       <div ng-controller="angularticsController">
-          <h1>Angulartics Demo Page</h1>
-          <button>Click Me</button>
+        <h1>Angulartics Demo Page</h1>
+        <a
+          href="#"
+          analytics-on="click"
+          analytics-event="Click"
+          analytics-category="Content Actions"
+          >Click this</a
+        >
       </div>
     </div>
   </body>
